# nyc-etl

./: .gitignore  1. raw_to_processed.py  2. processed_to_dw.py  Makefile  README.md  airflow-docker-compose.yaml  docker-compose.yaml  pyproject.toml  pyspark_demo.ipynb
Example/: Gold Notebook Transformations.ipynb  Silver Notebook Transformation.ipynb
airflow/: Dockerfile  read_files.ipynb  requirements.txt
airflow/dags/: elt_pipeline_dag.py
config/: datalake.yaml
metastore_db/: db.lck  service.properties
scripts/: extract_load.py  process_bronze_to_silver.py
utils/: check_schema.py  create_table.py
