[project]
name = "nyc-new"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "matplotlib>=3.10.1",
    "minio>=7.2.15",
    "notebook>=7.4.0",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "pyarrow>=19.0.1",
    "pyspark>=3.5.5",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "s3fs>=2025.3.0",
    "scikit-learn>=1.6.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
